# mr-graphics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  clang-tidy.sh  compile_commands.json  conanfile.py  neovim.json
.github/workflows/: build-test.yml  cmake-multi-platform.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: dependencies.cmake  download_dependencies.cmake  options.cmake  scripts.cmake  settings.cmake
examples/: CMakeLists.txt  main.cpp
examples/render_options/: render_options.cpp  render_options.hpp
src/: CMakeLists.txt  main.cpp  path.hpp  pch.hpp  system.hpp
src/camera/: camera.cpp  camera.hpp
src/lights/: light_render_data.hpp  lights.hpp
src/lights/base/: base_light.cpp  base_light.hpp
src/lights/directional/: directional_light.cpp  directional_light.hpp
src/model/: model.cpp  model.hpp
src/render_options/: render_options.cpp  render_options.hpp
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp  vulkan_application.cpp  vulkan_application.hpp  vulkan_state.cpp  vulkan_state.hpp
src/renderer/context/: context.cpp  context.hpp
src/renderer/manager/: manager.hpp  resource.hpp
src/renderer/material/: material.cpp  material.hpp
src/renderer/mesh/: attribute_types.cpp  attribute_types.hpp  mesh.cpp  mesh.hpp
src/renderer/resources/: buffer.cpp  command_unit.cpp  descriptor.cpp  framebuffer.cpp  image.cpp  resources.hpp  sampler.cpp  shader.cpp  texture.cpp
src/renderer/resources/attachment/: attachment.hpp
src/renderer/resources/buffer/: buffer.cpp  buffer.hpp
src/renderer/resources/command_unit/: command_unit.cpp  command_unit.hpp
src/renderer/resources/descriptor/: descriptor.cpp  descriptor.hpp
src/renderer/resources/framebuffer/: framebuffer.cpp  framebuffer.hpp
src/renderer/resources/framedata/: framedata.cpp  framedata.hpp
src/renderer/resources/images/: image.cpp  image.hpp
src/renderer/resources/pipelines/: compute_pipeline.cpp  compute_pipeline.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline.cpp  pipeline.hpp
src/renderer/resources/shaders/: shader.cpp  shader.hpp  spirv_reflect_src.cpp
src/renderer/resources/texture/: texture.cpp  texture.hpp
src/renderer/resources/texture/sampler/: sampler.cpp  sampler.hpp
src/renderer/timer/: timer.cpp  timer.hpp
src/renderer/window/: dummy_presenter.cpp  dummy_presenter.hpp  file_writer.hpp  file_writter.cpp  input_state.cpp  input_state.hpp  presenter.hpp  render_context.cpp  render_context.hpp  render_context_options.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp  window_context.cpp  window_context.hpp
src/renderer/window_context/: CMakeLists.txt  window.cpp  window.hpp  window_context.cpp  window_context.hpp
src/renderer/window_context/window_system/: CMakeLists.txt  window.cpp  window.hpp
src/scene/: scene.cpp  scene.hpp
src/utils/: log.hpp  logic_guards.hpp  misc.hpp  path.hpp
src/window_system/: window.cpp  window.hpp
